<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name=".MainActivity"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="152dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/welcome"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:textSize="26dp"/>


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Please log in or register below"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:padding="20dp"
            android:text="Play Game"
            app:backgroundTint="@color/teal_700" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Main Activity"
            android:textAlignment="textEnd"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>